# Programiranje-2

./: .gitignore  README.md
Vaja 10/Naloga1001/: CMakeLists.txt  naloga1001.cpp
Vaja 10/Naloga1001/Exercise/: Exercise.cpp  ExerciseTracker.cpp  ExerciseTracker.hpp  PrintIfStrengthExercise.cpp
Vaja 10/Naloga1001/Time/: Time.cpp  Time.hpp
Vaja 10/Naloga1002/: CMakeLists.txt  Printer.cpp  Printer.h  naloga1002.cpp
Vaja10/Naloga1001/: CMakeLists.txt
Vaja10/Naloga1001/Exercise/: CompetativeExercise.cpp  CompetativeExercise.hpp  Difficulty.cpp  ExerciseTracker.hpp  MuscleGroup.cpp  Person.cpp  PrintIfStrengthExercise.h  StrengthExercise.cpp  StrengthExercise.hpp  WeightLog.cpp  WeightLog.hpp
Vaja10/Naloga1001/Time/: Date.cpp  Date.hpp
Vaja10/Naloga1002/: Printer.h
Vaja11/Naloga1101/: CMakeLists.txt  DuplicateSensorException.cpp  DuplicateSensorException.hpp  InvalidLocationException.cpp  InvalidLocationException.hpp  PressureSensor.cpp  PressureSensor.hpp  PressureSensorP12.cpp  PressureSensorP12.hpp  PressureUnit.cpp  PressureUnit.hpp  Sensor.cpp  Sensor.hpp  SensorHub.cpp  SensorHub.hpp  naloga1101.cpp  out.txt
Vaja11/Naloga1102/: CMakeLists.txt  DuplicateSensorException.cpp  DuplicateSensorException.hpp  FileNotFoundException.cpp  FileNotFoundException.hpp  Log.cpp  Log.hpp  LogType.cpp  LogType.hpp  LoggedException.hpp  PressureSensor.cpp  PressureSensor.hpp  PressureSensorP12.cpp  PressureSensorP12.hpp  SensorHub.cpp  SensorHub.hpp  naloga1102.cpp  out.txt  out2.txt
Vaje01/: CMakeLists.txt  naloga0101.cpp  naloga0102.cpp
Vaje02/naloga0201/: CMakeLists.txt  Exercise.cpp  Exercise.hpp  naloga0201.cpp
Vaje02/naloga0202/: CMakeLists.txt  FuelLog.cpp  FuelLog.hpp  naloga0202.cpp
Vaje03/naloga0301/: CMakeLists.txt  Time.cpp  naloga0301.cpp
Vaje03/naloga0302/: CMakeLists.txt  TextUtility.cpp  TextUtility.hpp  naloga0302.cpp
Vaje04/Naloga0401/: CMakeLists.txt  Difficulty.cpp  Exercise.cpp  Exercise.hpp  ExerciseTracker.cpp  ExerciseTracker.hpp  Person.cpp  Time.hpp  naloga0401.cpp
Vaje04/Naloga0402/: CMakeLists.txt  naloga0402.cpp
Vaje04/Naloga0402/Date/: Date.cpp  DateTime.cpp  DateTime.hpp  Time.cpp  Time.hpp
Vaje04/Naloga0402/Mail/: Folder.cpp  Folder.hpp  Mailbox.cpp  Mailbox.hpp  Message.cpp  Message.hpp  Priority.cpp  Priority.hpp  User.cpp  User.hpp
Vaje05/Naloga0501/: CMakeLists.txt  naloga0501.cpp
Vaje05/Naloga0501/Exercise/: ExerciseTracker.cpp  ExerciseTracker.hpp  MuscleGroup.hpp  StrengthExercise.hpp
Vaje05/Naloga0501/Time/: Time.cpp
Vaje05/Naloga0502/: Account.cpp  Account.hpp  Bank.cpp  Bank.hpp  CMakeLists.txt  Date.cpp  Date.hpp  Naloga0502.cpp  SavingAccount.cpp  SavingAccount.hpp  Transaction.cpp  Transaction.hpp
Vaje06/Vaja0601/: CMakeLists.txt  CubePictograph.cpp  CubePictograph.hpp  DotPictograph.cpp  DotPictograph.hpp  Graph.cpp  Graph.hpp  HorizontalPictograph.cpp  HorizontalPictograph.hpp  PrintUtility.cpp  PrintUtility.hpp  VerticalPictograph.cpp  VerticalPictograph.hpp  vaja0601.cpp
Vaje06/Vaja0602/: CMakeLists.txt  Position.cpp  Position.hpp  Size.cpp  Size.hpp  vaja0602.cpp
Vaje06/Vaja0602/XML/: Button.cpp  Button.hpp  EditText.cpp  EditText.hpp  ImageView.cpp  ImageView.hpp  InputType.cpp  InputType.hpp  Layout.cpp  Layout.hpp  View.cpp  View.hpp  Xml.hpp
Vaje07/Vaja0701/: CMakeLists.txt  Point.h  VectorUtil.hpp  main.cpp
Vaje07/Vaja0702/: CMakeLists.txt  ColorCode.hpp  Point.cpp  VectorUtil.hpp  main.cpp
Vaje07/Vaja0702/Exercise/: Difficulty.hpp  Exercise.hpp
Vaje08/Vaja0801/: CMakeLists.txt  LinearQueue.hpp  main.cpp
Vaje08/Vaja0802/: CMakeLists.txt  LinkedList.hpp  Node.hpp  main.cpp
Vaje09/Naloga0901/: CMakeLists.txt  Date.cpp  Date.hpp  SmartPointer.hpp  main.cpp
Vaje09/Naloga0902/: CMakeLists.txt  Date.cpp  Date.hpp  ReferenceCounter.cpp  ReferenceCounter.hpp  SmartPointer.hpp  main.cpp
